fix alignment of navbar

--- a/ckanext/ckanext-apicatalog/scss/nav.scss
+++ b/ckanext/ckanext-apicatalog/scss/nav.scss
@@ -154,6 +154,7 @@ li:not(.active) .minusglyph {
   }
 
   .navbar-nav{
+    margin: initial;
     & > li {
       & > a {
         color: $kapa-black;
